# mp6160-vitis-hls-accelerator

./: .gitignore  AGENTS.md  Makefile  README.md
.claude/skills/log-ai/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  results-gem5.yml  results.yml
docs/: Enunciado.md
hls/scripts/: run_hls.tcl
hls/src/: grayscale_accel.cpp
hls/tb/: grayscale_accel_tb.cpp
scripts/: check_output.py  generate_results.py  jpg_to_raw.py  prepare_input.py  raw_to_jpg.py
src/common/: image_config.h  memory_map.h
src/gem5/: Accelerator.py  README.md  SConscript  accelerator_wrapper.cc  accelerator_wrapper.hh
src/gem5/configs/: kv260_arm64.py
src/hls/: grayscale_accel.cpp  grayscale_accel.h
src/hls/scripts/: run_hls.tcl
src/hls/tb/: grayscale_accel_tb.cpp
src/model/: CMakeLists.txt  Makefile  SConscript  main.cpp
src/model/accelerator/: accelerator.cpp  accelerator.h
src/model/bus/: bus.cpp  bus.h
src/model/cpu/: cpu.cpp  cpu.h
src/model/disk/: disk.cpp
src/model/ram/: ram.cpp  ram.h
src/model/utils/: conversion.h
src/program/: CMakeLists.txt  Makefile  aarch64-toolchain.cmake  main.c
virtual-prototype/gem5/: README.md
virtual-prototype/gem5/configs/: kv260_arm64.py
virtual-prototype/gem5/src/: Accelerator.py  SConscript  accelerator_wrapper.hh
virtual-prototype/program/: CMakeLists.txt
virtual-prototype/program/src/: main.c
virtual-prototype/systemc-model/: CMakeLists.txt
virtual-prototype/systemc-model/src/accelerator/: accelerator.cpp  accelerator.h
virtual-prototype/systemc-model/src/cpu/: cpu.cpp  cpu.h
virtual-prototype/systemc-model/src/disk/: disk.cpp  disk.h
